@startuml
skinparam linetype ortho
hide empty members

skinparam class {
	ArrowColor SteelBlue
	BorderColor Dimgray
	HeaderBackgroundColor SteelBlue
	BackgroundColor White
	FontName Calibri bold
	AttributeFontColor #333
	AttributeFontName Calibri
	AttributeFontSize 13
	FontColor Ivory
	FontSize 15
}

'UI
class ConfigureHouseUI {
- ctrl:ConfigureHouseCTRL
- gaList:GAList

+ configHouseFromFile()
- selectGA()
- coordinatesInput()
- createHouseFromFile()
}

'CONTROLLER
class ConfigureHouseCTRL {
- dataImportHouse : DataImport
- gaMapper : GeographicalAreaMapper
- gaList : GAList
+ getGAListDTO()
+ showGAListDTO()
+ getGAListSize()
+ getIdFromIndex()
+ configureHouseFromFileCTRL()
+ getRoomListSizeCTRL()
+ getGridListSizeCTRL()
}

'DTO
class GeographicalAreaDTO{
- identification: String
- designation: String
+ getIdentification()
+ getDesignation()
}

'MAPPER
class GeographicalAreaMapper {
- sensorMapper: SensorMapper
+ toDtoList()
}

'MODEL.READERS
class DataImport{
- parser : JSONParser
- configFilePath : Path
- configHouseFilePath : Path
- gaList : GAList
- notAdded : List<GeographicalArea>
- getFileExtension()
- readConfigFile()
- getClassName()
- getHouseConfigFileReader()
+ importHouse()
}

interface FileReaderHouse {
+ importHouseConfiguration()
}

class JSONHouse {
- filePath : Path
- parser : JSONParser

+ importHouseConfiguration()
- readFile()
- importAddress()
- importRooms()
- importGrids()
- loadRoom()
- loadGrid()
- loadRoomsInGrid()
}

'MODEL
class GAList{
- listOfGA: List<GeographicalArea>
+ get(int)
+ size()
}

class GeographicalArea{
 - identification: String
 - designation: String
 + getId()
 + getGAName()
 + gaInString()

 }

class House {
- address: Address
- gA: GeographicalArea
- roomList: RoomList
- houseGridList: HouseGridList
- theHouse: House
+ getHouseInstance()
+ getHouseGA()
+ setHouseGA()
+ getAddress()
+ setAddress()
+ getHouseRoomList()
+ getGridListInHouse()
}

class RoomList {
- listOfRooms: List<Room>
+ getRoomListSize()
+ getRoomById(String)
}

class Room{
- id: String
+ getId()
}

class HouseGridList {
- listOfRooms: List<Room>
+ getRoomListSize()
+ getRoomById(String)
}

class HouseGrid {
- roomList: RoomList
+ getRoomListInAGrid()
}


 class Address{
 - street: String
 - number: String
 - zipCode: String
 - town: String
 - country: String
 - gpsLocation: Location
+ setGpsLocation()
+ addressToString()
 }

class Location{
- latitude: double
- longitude: double
- altitude: double
+ locationToString()
}

ConfigureHouseUI .> ConfigureHouseCTRL
ConfigureHouseCTRL --> GeographicalAreaDTO
ConfigureHouseCTRL ---> Location
ConfigureHouseCTRL --> DataImport
DataImport --> FileReaderHouse

GeographicalArea"1" - "1" GAList
GeographicalArea "1"-- "0..1"GeographicalArea
House -- "1" GeographicalArea
House -- "1" Address
Address"1" - "1"Location

House - "1" RoomList
RoomList - "*" Room

House -- "1"HouseGridList
HouseGridList "1  " -- "1..*"HouseGrid

GeographicalArea <.. GeographicalAreaDTO
GeographicalAreaDTO .> GeographicalAreaMapper

JSONHouse .|> FileReaderHouse
JSONHouse --> Address
JSONHouse --> Room
JSONHouse --> HouseGrid

@enduml